[package]
name = "web-scrape-rs"
version = "0.1.0"
authors = ["jhgalino"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = "0.11.1"
tokio = {version="1.2.0",features=["rt", "rt-multi-thread", "macros"]}
